Se realizo el envio de mail con resend y la paginacion

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 CLOUDINARY_CLOUD_NAME=db8hoskhy
 CLOUDINARY_API_KEY=468293144665724
 CLOUDINARY_API_SECRET=cBrTh-wvaoBr8WGnFprhUnZUZ2E
+RESEND_API_KEY=re_54BXcSiP_m77Ywc5EKrMrRhrgGUfYEnoQ
